fix(button): align content center

--- a/packages-new/components/button/src/components/osds-button/osds-button.scss
+++ b/packages-new/components/button/src/components/osds-button/osds-button.scss
@@ -41,10 +41,6 @@
       position: relative;
       max-width: inherit;
     }
-
-    .button__centered-text {
-      display: inline-flex;
-    }
   }
 
   @include osds-button-on-main-element() {
